fix overflow-x document

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body{
     margin: 0;
     background-color: #FF618E !important;
+    overflow-x: hidden;
 }
